# localguard

./: .gitignore  BRIEF.md  LICENSE  README.md  SESSION.md  TESTING_PLAN.md  pyproject.toml
.claude/: settings.local.json
docs/notes/: issue-4-npm-dist-attribution.md
src/localguard/: audit.py  cache.py  cli.py  deps.py  diff.py  doctor.py  egress.py  fetch.py  hook.py  init_hook.py  inspect.py  js_ast.py  library_refresh.py  manifest.py  mcp_detector.py  memory.py  memory_scan.py  memory_store.py  preflight.py  python_ast.py  report.py  rubric.py  text_sweep.py  walker.py
tests/: test_allowlist_hygiene.py  test_audit.py  test_cache.py  test_cli_accept.py  test_cli_diff_versions.py  test_cli_library.py  test_cli_profile.py  test_cli_snapshots.py  test_deps.py  test_diff.py  test_doctor.py  test_e2e_hook_library_loop.py  test_egress.py  test_false_positive_fixes.py  test_fetch_resolver.py  test_hook.py  test_hook_block_snapshot.py  test_init_hook.py  test_inspect.py  test_js_ast.py  test_legacy_schema.py  test_library_refresh.py  test_library_stats.py  test_mcp.py  test_memory.py  test_pin_surfaces_drift.py  test_preflight.py  test_profile_detection.py  test_promote_lifecycle.py  test_role_typicality_properties.py  test_rubric.py  test_schema_version.py  test_text_sweep.py  test_walker_edge_cases.py
tests/calibration/: conftest.py  pinned_scores.json  test_npm_calibration.py  test_pypi_calibration.py
tests/snapshots/: config_show.txt  hook_block_role_typical.txt  (+4 more)
tools/: dump_calibration_observed.py  rebaseline_library.py  seed_calibration_cache.py
(+13 files in other folders)
