[project]
name = "localguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Qcko", email = "komec@centrum.cz" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
localguard = "localguard:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
